crates/next-custom-transforms/tests/errors/server-actions/client-graph/1/input.js
'use client'

export default function App() {
  async function fn() {
    'use server'
  }
  return <div>App</div>
}
